add css, complete portfolio section

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,6 +19,10 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+img {
+  
+}
+
 @font-face{
   font-family: "burtons";
   /* src: url("../public/Burtons.otf"); */
